# domain/src/main/java/com/ibx/account/domain/model/Account.java
@@ -1,0 +1,6 @@
+package com.ibx.account.domain.model;
+
+public record Account(String id, String username, String password, String firstName,
+                      String lastName) {
+
+}
