# domain/src/main/java/com/ibx/account/domain/usecase/FindAllAccounts.java
@@ -1,0 +1,10 @@
+package com.ibx.account.domain.usecase;
+
+import com.ibx.account.domain.model.Account;
+import reactor.core.publisher.Flux;
+
+public interface FindAllAccounts {
+
+  Flux<Account> apply();
+
+}
