# domain/src/main/java/com/ibx/account/domain/usecase/UpdateAccount.java
@@ -1,0 +1,10 @@
+package com.ibx.account.domain.usecase;
+
+import com.ibx.account.domain.model.Account;
+import reactor.core.publisher.Mono;
+
+public interface UpdateAccount {
+
+  Mono<Account> apply(String accountId, Account accountRequest);
+
+}
